--- a/public/404.html
+++ b/public/404.html
@@ -2,24 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=/future-forge/" />
+    <title>Future Forge</title>
     <script>
-      // GitHub Pages SPA redirect for React Router
-      var l = window.location;
-      var repo = '/future-forge';
-      var redirect = repo + '/index.html';
-      var fullPath = l.pathname.replace(repo, '');
-      var search = l.search || '';
-      var hash = l.hash || '';
-      // Only redirect if not already at index.html
-      if (!l.pathname.endsWith('index.html')) {
-        window.location.replace(redirect + '?redirect=' + encodeURIComponent(fullPath + search + hash));
-      }
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+    <script>
+      sessionStorage.redirect = window.location.pathname + window.location.search;
+      window.location.replace('/future-forge/');
     </script>
   </head>
   <body>
-    <h1>Redirecting...</h1>
-    <p>If you are not redirected, <a href="/future-forge/">click here</a>.</p>
+    <noscript>
+      <h1>JavaScript is required to view this site.</h1>
+      <a href="/future-forge/">Click here to go to the homepage</a>
+    </noscript>
   </body>
 </html>
