--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         }
       })();
     </script>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Exclaimer Hackathon Project" />
+    <meta name="author" content="Exclaimer" />
 
     <meta property="og:title" content="exclaimer-future-forge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Exclaimer Hackathon Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/exclaimer-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@exclaimer" />
+    <meta name="twitter:image" content="/exclaimer-logo.png" />
   </head>
 
   <body>    <div id="root"></div>
